examples/service-discovery/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.staging.01cloud.dev  # Replace with your domain or external IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: derived-j1728njoq1
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.staging.01cloud.dev  # Replace with your domain or external IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: derived-bo2bp9c7ce
            port:
              number: 80
